--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
+* {
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+}
+
 div {
-    font-size: 35px;
+    font-size: 30px;
     
+}
+body {
+    height: 100vh;
+    margin:0%;
+    border-radius: 10%;
 }
 
 button {
-    border-radius: 15%;
+    border-radius: 25px;
     font-size: 55px;
     border: 15px solid palevioletred;
     transition-duration: 0.4s;
-    
 }
 
 button:hover {
@@ -17,23 +27,22 @@ button:hover {
   }
 
 .b1 {
-    
     background-image: url("paper.png");
-    height: 350px;
-    width: 350px;
+    height: 38vh;
+    width: 38vh;
     background-size:contain ;}
 
 .b2{
     background-image: url("scissors.png");
-    height: 350px;
-    width: 350px;
+    height: 38vh;
+    width: 38vh;
     background-size:contain ;
    }
 
 .b3 {
     background-image: url("rock.png") ;
-    height: 350px;
-    width: 350px;
+    height: 38vh;
+    width: 38vh;
     background-size:contain ;}
 
 .winner {
@@ -42,19 +51,14 @@ button:hover {
     align-items: center;
     align-content:center ;
     background-color: rgb(255, 183, 0);
-    height: 3em;
+    height: 15vh;
     font-size: 40px;
 }
 
 .hidden {
-    margin: auto;
-    padding: 2em;
+    height: 70vh;38vhpadding: 1em;
 }
 #prompt, #result {
-padding: 10px;
+padding: 5px;
 }
 
-body {
-    margin:0%;
-    border-radius: 10%;
-}
